@@ -123,10 +123,10 @@ class Swift_Transport_Esmtp_Auth_NTLMAuthenticator implements Swift_Transport_Es
         $responseHex = bin2hex($response);
         $length = floor(hexdec(substr($responseHex, 28, 4)) / 256) * 2;
         $offset = floor(hexdec(substr($responseHex, 32, 4)) / 256) * 2;
-        $challenge = $this->hex2bin(substr($responseHex, 48, 16));
-        $context = $this->hex2bin(substr($responseHex, 64, 16));
-        $targetInfoH = $this->hex2bin(substr($responseHex, 80, 16));
-        $targetName = $this->hex2bin(substr($responseHex, $offset, $length));
+        $challenge = hex2bin(substr($responseHex, 48, 16));
+        $context = hex2bin(substr($responseHex, 64, 16));
+        $targetInfoH = hex2bin(substr($responseHex, 80, 16));
+        $targetName = hex2bin(substr($responseHex, $offset, $length));
         $offset = floor(hexdec(substr($responseHex, 88, 4)) / 256) * 2;
         $targetInfoBlock = substr($responseHex, $offset);
         list($domainName, $serverName, $DNSDomainName, $DNSServerName, $terminatorByte) = $this->readSubBlock($targetInfoBlock);
@@ -140,7 +140,7 @@ class Swift_Transport_Esmtp_Auth_NTLMAuthenticator implements Swift_Transport_Es
             $serverName,
             $DNSDomainName,
             $DNSServerName,
-            $this->hex2bin($targetInfoBlock),
+            hex2bin($targetInfoBlock),
             $terminatorByte,
         );
     }
@@ -162,7 +162,7 @@ class Swift_Transport_Esmtp_Auth_NTLMAuthenticator implements Swift_Transport_Es
         while ($offset < $length) {
             $blockLength = hexdec(substr(substr($block, $offset, 8), -4)) / 256;
             $offset += 8;
-            $data[] = $this->hex2bin(substr($block, $offset, $blockLength * 2));
+            $data[] = hex2bin(substr($block, $offset, $blockLength * 2));
             $offset += $blockLength * 2;
         }
 
@@ -446,7 +446,7 @@ class Swift_Transport_Esmtp_Auth_NTLMAuthenticator implements Swift_Transport_Es
             }
         }
 
-        return $this->hex2bin(implode('', $material));
+        return hex2bin(implode('', $material));
     }
 
     /** HELPER FUNCTIONS */
@@ -520,7 +520,7 @@ class Swift_Transport_Esmtp_Auth_NTLMAuthenticator implements Swift_Transport_Es
     protected function createByte($input, $bytes = 4, $isHex = true)
     {
         if ($isHex) {
-            $byte = $this->hex2bin(str_pad($input, $bytes * 2, '00'));
+            $byte = hex2bin(str_pad($input, $bytes * 2, '00'));
         } else {
             $byte = str_pad($input, $bytes, "\x00");
         }
@@ -593,7 +593,7 @@ class Swift_Transport_Esmtp_Auth_NTLMAuthenticator implements Swift_Transport_Es
     {
         $input = $this->convertTo16bit($input);
 
-        return function_exists('hash') ? $this->hex2bin(hash('md4', $input)) : mhash(MHASH_MD4, $input);
+        return function_exists('hash') ? hex2bin(hash('md4', $input)) : mhash(MHASH_MD4, $input);
     }
 
     /**
@@ -605,20 +605,6 @@ class Swift_Transport_Esmtp_Auth_NTLMAuthenticator implements Swift_Transport_Es
     protected function convertTo16bit($input)
     {
         return iconv('UTF-8', 'UTF-16LE', $input);
-    }
-
-    /**
-     * Hex2bin replacement for < PHP 5.4
-     * @param string $hex
-     * @return string Binary
-     */
-    protected function hex2bin($hex)
-    {
-        if (function_exists('hex2bin')) {
-            return hex2bin($hex);
-        } else {
-            return pack('H*', $hex);
-        }
     }
 
     /**
@@ -645,7 +631,7 @@ class Swift_Transport_Esmtp_Auth_NTLMAuthenticator implements Swift_Transport_Es
                 'Target Information Terminator',
             );
 
-            $data = $this->parseMessage2($this->hex2bin($message));
+            $data = $this->parseMessage2(hex2bin($message));
 
             foreach ($map as $key => $value) {
                 echo bin2hex($data[$key]).' - '.$data[$key].' ||| '.$value."<br />\n";
@@ -691,7 +677,7 @@ class Swift_Transport_Esmtp_Auth_NTLMAuthenticator implements Swift_Transport_Es
             );
 
             foreach ($map as $key => $value) {
-                echo $data[$key].' - '.$this->hex2bin($data[$key]).' ||| '.$value."<br />\n";
+                echo $data[$key].' - '.hex2bin($data[$key]).' ||| '.$value."<br />\n";
             }
         }
 
