@@ -93,7 +93,7 @@ Swift_DependencyContainer::getInstance()
     ->withDependencies(array('properties.charset'))
     ->asNewInstanceOf('Swift_Mime_ContentEncoder_NativeQpContentEncoder')
 
-    ->register('mime.qpcontentencoderproxy')
+    ->register('mime.qpcontentencoder')
     ->asNewInstanceOf('Swift_Mime_ContentEncoder_QpContentEncoderProxy')
     ->withDependencies(array('mime.safeqpcontentencoder', 'mime.nativeqpcontentencoder', 'properties.charset'))
 
@@ -113,11 +113,6 @@ Swift_DependencyContainer::getInstance()
     ->register('mime.rfc2231encoder')
     ->asNewInstanceOf('Swift_Encoder_Rfc2231Encoder')
     ->withDependencies(array('mime.charstream'))
-
-    // As of PHP 5.4.7, the quoted_printable_encode() function behaves correctly.
-    // see https://github.com/php/php-src/commit/18bb426587d62f93c54c40bf8535eb8416603629
-    ->register('mime.qpcontentencoder')
-    ->asAliasOf(version_compare(phpversion(), '5.4.7', '>=') ? 'mime.qpcontentencoderproxy' : 'mime.safeqpcontentencoder')
 ;
 
 unset($swift_mime_types);
